--- a/examples/base/headings.html
+++ b/examples/base/headings.html
@@ -3,7 +3,7 @@ layout: default
 title: Headings
 category: _base
 ---
-<h1>This is a sample of the &lt;h1&gt; heading</h1>
+<h1>This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. $color-x-light. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. $color-x-light. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. This is a sample of the &lt;h1&gt; heading. $color-x-light. </h1>
 <h2>This is a sample of the &lt;h2&gt; heading</h2>
 <h3>This is a sample of the &lt;h3&gt; heading</h3>
 <h4>This is a sample of the &lt;h4&gt; heading</h4>
