add clear left on first columns; update example

--- a/examples/patterns/grid/column-wrapping.html
+++ b/examples/patterns/grid/column-wrapping.html
@@ -5,17 +5,65 @@ category: _patterns
 ---
 <div grid-demo>
     <div class="row">
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--small"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--medium u-first-col--large"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2 u-first-col--small"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
-        <div class="mobile-col-1 tablet-col-1 col-2"></div>
+        <div class="mobile-col-2 tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2 u-first-col--small">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--small
+            </span>
+        </div>
+        <div class="mobile-col-2 u-first-col--medium tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--medium
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2 u-first-col--small">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--small
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2 u-first-col--small u-first-col--medium u-first-col--large">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--small u-first-col--medium u-first-col--large
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2
+            </span>
+        </div>
+        <div class="mobile-col-2 u-first-col--small tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--small
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2 u-first-col--medium">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--medium
+            </span>
+        </div>
+        <div class="mobile-col-2 u-first-col--small tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2 u-first-col--small
+            </span>
+        </div>
+        <div class="mobile-col-2 tablet-col-2 col-2">
+            <span>
+                mobile-col-2 tablet-col-2 col-2
+            </span>
+        </div>
     </div>
 </div>
