rename device classes to small/medium

--- a/examples/patterns/grid/offsets.html
+++ b/examples/patterns/grid/offsets.html
@@ -6,19 +6,23 @@ category: _patterns
 
 <div class="p-strip">
   <div class="row">
-    <div class="mobile-col-4 tablet-col-6 col-12">
+    <div class="col-small-4 col-medium-6 col-12">
       <h2>Column reordering</h2>
     </div>
   </div>
 
   <div class="row" css-grid-demo>
-      <div class="mobile-col-3 tablet-col-4 col-9 col-start-large-4 order-large-2">
-        <p>col-start-large-2 order-large-2</p>
-
+      <div class="col-small-3 col-medium-4 col-9
+        col-start-small-2 col-order-small-2
+        col-start-medium-3 col-order-medium-2
+        col-start-large-4 col-order-large-2">
+        <p>col-start-large-2 col-order-large-2</p>
       </div>
-      <div class="mobile-col-1 tablet-col-2 col-3 col-start-large-1 order-large-1">
-        <p>col-start-large-1 order-large-1</p>
-
+      <div class="col-small-1 col-medium-2 col-3
+        col-start-small-1 col-order-small-1
+        col-start-medium-1 col-order-medium-1
+        col-start-large-1 col-order-large-1">
+        <p>col-start-large-1 col-order-large-1</p>
       </div>
     </div>
   </div>
