Add back-to-top link

--- a/index.html
+++ b/index.html
@@ -85,5 +85,8 @@ title: Home
         </ul>
       </nav>
     </div>
+    <div class="p-top">
+      <a href="#" class="p-top__link">Back to top</a>
+    </div>
   </div>
 </div>
