--- a/examples/patterns/grid/offsets.html
+++ b/examples/patterns/grid/offsets.html
@@ -11,7 +11,7 @@ category: _patterns
     </div>
   </div>
 
-  <div class="row" css-grid-demo>
+  <div class="row" class="grid-demo">
       <div class="col-small-3 col-medium-4 col-9
         col-start-small-2 col-order-small-2
         col-start-medium-3 col-order-medium-2
