Update error page templates

--- a/site/500.html
+++ b/site/500.html
@@ -1,11 +1,18 @@
-{% extends "_layouts/default.html" %}
+{% extends "_layouts/site.html" %}
 
 {% block content %}
-<div class="p-strip is-deep">
+<div id="main-content" class="p-strip--image is-dark vfio-hero">
   <div class="row">
-    <div class="col-8">
-      <h1>500: Server error</h1>
-      <p class="p-heading--four">Something went wrong.<br>Please <a class="p-link--external" href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new">file a bug.</a></p>
+    <div class="col 12">
+      <h1 class="u-no-margin--bottom">500 - Internal server error</h1>
+    </div>
+  </div>
+</div>
+
+<div class="p-strip is-shallow">
+  <div class="row">
+    <div class="col 12">
+      <p>Something went wrong on our end. If you have the time, please help us out by <a class="p-link--external" href="https://github.com/canonical-websites/vanillaframework.io/issues/new">filing a bug.</a></p>
     </div>
   </div>
 </div>
