--- a/site/404.html
+++ b/site/404.html
@@ -1,11 +1,18 @@
-{% extends "_layouts/default.html" %}
+{% extends "_layouts/site.html" %}
 
 {% block content %}
-<div class="p-strip is-deep">
+<div id="main-content" class="p-strip--image is-dark vfio-hero">
   <div class="row">
-    <div class="col-8">
-      <h1>404: Page not found</h1>
-      <p class="p-heading--four">Sorry, we can't find the page you're looking for.<br>If you think this is an error on our site, please <a class="p-link--external" href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new">file a bug.</a></p>
+    <div class="col 12">
+      <h1 class="u-no-margin--bottom">404 - Page not found</h1>
+    </div>
+  </div>
+</div>
+
+<div class="p-strip is-shallow">
+  <div class="row">
+    <div class="col 12">
+      <p>Sorry, we can't find the page you're looking for. If you think this is an error on our site, please <a class="p-link--external" href="https://github.com/canonical-web-and-design/vanilla-framework/issues/new">file a bug on GitHub.</a></p>
     </div>
   </div>
 </div>
