--- a/site/showcase.html
+++ b/site/showcase.html
@@ -40,7 +40,7 @@ copydoc: https://docs.google.com/document/d/1daLrp_H_BGhSefvrP-aj3v3505dEz-zoKF2
     <div class="col-4 p-card" style="background-color: #f7f7f7;">
       <h3 class="p-heading--4">Use Vanilla in your projects</h3>
       <p>View our documentation to find out different ways of adding Vanilla framework into your projects.</p>
-      <a href="https://docs.vanillaframework.io" class="p-button--positive">Get started with Vanilla</a>
+      <a href="/docs" class="p-button--positive">Get started with Vanilla</a>
     </div>
   </div>
   <div class="row u-equal-height">
