Update references to docs.vanillaframework

--- a/site/index.html
+++ b/site/index.html
@@ -62,7 +62,7 @@
   <div class="row">
     <div class="col-6">
       <p>The recommended method of including Vanilla Framework in your project is via <a href="https://www.npmjs.com/package/vanilla-framework">npm</a>. You can then simply include the framework in your SCSS files and compile.</p>
-      <p>For other methods, please see the <a href="https://docs.vanillaframework.io">advanced usage docs.</a></p>
+      <p>For other methods, please see the <a href="/docs">advanced usage docs.</a></p>
     </div>
     <div class="col-6">
       <pre><code>npm install --save-dev vanilla-framework
