--- a/site/browser-support.html
+++ b/site/browser-support.html
@@ -6,35 +6,38 @@
 
 
 {% block content %}
-<div id="main-content" class="p-strip--image is-dark vfio-hero">
-  <div class="row">
-    <h1 class="u-no-margin--bottom">Browser support</h1>
-  </div>
-</div>
-<div class="p-strip u-no-padding--bottom">
-  <div class="row">
-    <div class="col-8">
-      <p class="p-heading--4">Vanilla framework follows the principles of progressive enhancement and web standards. Users should be able to access core content and functionality from any browser or operating system, with varying degrees of access to visual and other enhancements — design components do not have to look exactly the same on every browser.</p>
+
+<div id="main-content" class="p-strip is-deep">
+  <div class="p-strip is-shallow">
+    <div class="row">
+      <div class="col-start-large-4 col-9">
+        <h1 class="">Browser support</h1>
+      </div>
     </div>
   </div>
 </div>
-<div class="p-strip is-shallow">
+
+<div class="p-strip u-no-padding--top">
   <div class="row">
-    <div class="col-8">
+    <div class="col-9 col-start-large-4">
+      <p>Vanilla framework follows the principles of progressive enhancement and web standards. Users should be able to
+        access core content and functionality from any browser or operating system, with varying degrees of access to
+        visual and other enhancements — design components do not have to look exactly the same on every browser.</p>
       <h2>Bugs and prioritisation</h2>
       <ul class="p-list">
-        <li class="p-list__item is-ticked">If the bug prevents access to core content (for example, by hiding it or covering it), it should be prioritised</li>
-        <li class="p-list__item is-ticked">If the bug relates to visual differences that do not affect access to content on modern browsers, it should be queued up</li>
+        <li class="p-list__item is-ticked">If the bug prevents access to core content (for example, by hiding it or
+          covering it), it should be prioritised</li>
+        <li class="p-list__item is-ticked">If the bug relates to visual differences that do not affect access to content
+          on modern browsers, it should be queued up</li>
         <li class="p-list__item is-ticked">Priority level should be determined case by case</li>
-        <li class="p-list__item is-ticked">If the bug relates to visual differences that do not affect access to content on old browsers, it should be deprioritised</li>
+        <li class="p-list__item is-ticked">If the bug relates to visual differences that do not affect access to content
+          on old browsers, it should be deprioritised</li>
       </ul>
-    </div>
-  </div>
-  <div class="row">
-    <div class="col-8">
       <h2>Supported browsers</h2>
-      <p>The following are the browsers that we actively test all components on. That does not mean other browsers are not supported or that bugs reported are not acted on.</p>
-      <ul class="p-list--divided is-split">
+      <p>The following are the browsers that we actively test all components on. That does not mean other browsers
+        are
+        not supported or that bugs reported are not acted on.</p>
+      <ul class="p-list">
         <li class="p-list__item"><span class="p-icon--chrome"></span>Chrome 62 or greater</li>
         <li class="p-list__item"><span class="p-icon--firefox"></span>Firefox 56 or greater</li>
         <li class="p-list__item"><span class="p-icon--safari"></span>Safari 11 or greater</li>
